# ESP32-S3-PhotoPainter

./: README.md
01 Example/: README.md
01 Example/xiaozhi-esp32/main/: CMakeLists.txt  main.cc
01 Example/xiaozhi-esp32/main/display/: display.cc
01_Example/: README.md
01_Example/xiaozhi-esp32/: clang-format  sdkconfig.defaults
01_Example/xiaozhi-esp32/components/ListLib/: CMakeLists.txt
01_Example/xiaozhi-esp32/components/app_bsp/: CMakeLists.txt  ai_app.cpp  ai_app.h  client_app.c  client_app.h  jpegdecode_app.cpp  jpegdecode_app.h  server_app.cpp  server_app.h  weather_app.cpp
01_Example/xiaozhi-esp32/components/app_bsp/jpg_src/: test_decoder.c
01_Example/xiaozhi-esp32/components/audio_bsp/: CMakeLists.txt  user_audio_bsp.cpp  user_audio_bsp.h
01_Example/xiaozhi-esp32/components/axpPower/: CMakeLists.txt  axp_prot.cpp  axp_prot.h
01_Example/xiaozhi-esp32/components/button_bsp/: button_bsp.c  button_bsp.h
01_Example/xiaozhi-esp32/components/codec_board/: board_cfg.txt
01_Example/xiaozhi-esp32/components/epaper_port/: CMakeLists.txt  epaper_port.c  epaper_port.h
01_Example/xiaozhi-esp32/components/epaper_src/: GUI_BMPfile.c  GUI_Paint.c  GUI_Paint.h
01_Example/xiaozhi-esp32/components/esp32_ai_bsp/: CMakeLists.txt  esp32_ai_bsp.cpp  esp32_ai_bsp.h  floyd_steinberg.cpp  floyd_steinberg.h
01_Example/xiaozhi-esp32/components/http_client_bsp/: CMakeLists.txt  client_bsp.c  client_bsp.c.rej  client_bsp.h
01_Example/xiaozhi-esp32/components/http_server_bsp/: CMakeLists.txt  server_bsp.cpp  server_bsp.h
01_Example/xiaozhi-esp32/components/i2c_bsp/: i2c_bsp.c  i2c_bsp.h
01_Example/xiaozhi-esp32/components/json_bsp/: json_data.cpp  (+2 more)
01_Example/xiaozhi-esp32/components/port_bsp/: CMakeLists.txt  button_bsp.c  button_bsp.h  codec_bsp.cpp  display_bsp.cpp  display_bsp.h  i2c_equipment.cpp  led_bsp.c  led_bsp.h  sdcard_bsp.cpp  sdcard_bsp.h  traverse_nvs.cpp
01_Example/xiaozhi-esp32/components/port_bsp/src/fonts/: fonts.h
01_Example/xiaozhi-esp32/components/user_app_bsp/: CMakeLists.txt  user_app.cpp  user_app.h
01_Example/xiaozhi-esp32/components/user_app_bsp/mode_src/: Basic_mode.cpp  Mode_Selection.cpp  Network_mode.cpp  xiaozhi_mode.cpp
01_Example/xiaozhi-esp32/main/: Kconfig.projbuild  idf_component.yml  main.cc
02_SDCARD/03_sys_ap_html/: index.html
02_SDCARD/06_user_Foundation_img/: config.txt
04_PowerConsumptionTest/01_Arduino_Src/01_Fac_Test/: 01_Fac_Test.ino
(+19 files in other folders)
